<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Background Color Buttons</string>
    <string name="hello_world">Hello world!</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <item android:layout_width="wrap_content" android:id="@+id/item1" android:layout_height="wrap_content" type="id" name="tag_key_color"/>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="LinearLayout1">LinearLayout1</string>
  
</resources>
